Fixes #883 - img alignment of main navigation panel text in admin.

--- a/e107_themes/bootstrap/admin_style.css
+++ b/e107_themes/bootstrap/admin_style.css
@@ -980,7 +980,7 @@ li.rssRow > div {
 
 .media-manager {padding:20px; min-height:400px }
 
-
+.core-mainpanel-link-icon img { margin-bottom: 5px }
 
 /*
 
